backend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: suqafuran
  labels:
    name: suqafuran
